--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "formik": "^2.4.5",
+    "formik-mui": "^5.0.0-alpha.0",
     "modern-normalize": "^2.0.0",
     "nanoid": "^5.0.1",
     "notiflix": "^3.2.6",
